<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddEditAssessment">

        <include
            android:id="@+id/include3"
            layout="@layout/toolbar3" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/str_add_edit_assessment"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include3" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:text="@string/str_assessment_title"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/str_Start_Date"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/str_End_date"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/str_assessment_type"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />

        <EditText
            android:id="@+id/et_assessment_title"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/str_enter_title"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/et_assessment_SD"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/str_enter_SD"
            android:inputType="none"
            android:focusable="false"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="@+id/textView20"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/et_assessment_ED"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/str_enter_ED"
            android:inputType="none"
            android:focusable="false"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="@+id/textView21"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_cance_edit_assessl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="32dp"
            android:text="@string/btn_Str_Cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <Button
            android:id="@+id/btn_saveAssessment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_str_save"
            app:layout_constraintBottom_toBottomOf="@+id/btn_cance_edit_assessl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_cance_edit_assessl" />

        <Spinner
            android:id="@+id/sp_assess_type"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:entries="@array/Asses_Type_options"
            app:layout_constraintBottom_toBottomOf="@+id/textView22"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>