<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTerm">
    <include layout="@layout/toolbar3"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/header3createTerm"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/str_Term_Name"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:text="@string/str_Start_Date"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tv_Enter_END_DATE"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:text="@string/str_End_date"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/et_Term_Name"
        android:layout_width="200dp"
        android:layout_height="50dp"


        android:autoText="true"
        android:hint="Enter the Name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <EditText
        android:id="@+id/et_Start_Date_C"
        android:layout_width="200dp"
        android:layout_height="50dp"


        android:hint="Enter the Start Date"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <EditText
        android:id="@+id/et_End_Date_C"
        android:layout_width="200dp"
        android:layout_height="50dp"


        android:hint="Enter the End Date"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/tv_Enter_END_DATE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_Enter_END_DATE" />

    <Button
        android:id="@+id/bt_Create_Term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createTermbtn"
        app:layout_constraintBottom_toBottomOf="@+id/btn_Cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.779"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_Cancel"
        android:layout_width="119dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:text="@string/btn_Str_Cancel"
        app:layout_constraintEnd_toStartOf="@+id/bt_Create_Term"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Enter_END_DATE" />
</androidx.constraintlayout.widget.ConstraintLayout>