<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewassessment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AssessmentView">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/str_assessment_details"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="32dp"
            android:text="@string/str_Course_id"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView23" />

        <TextView
            android:id="@+id/tv_Course_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/str_temp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView24"
            app:layout_constraintStart_toEndOf="@+id/textView24" />

        <TextView
            android:id="@+id/tv_assessID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:text="@string/str_temp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView24"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="@string/str_assessment_id"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_assessID"
            app:layout_constraintEnd_toStartOf="@+id/tv_assessID" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="24dp"
            android:text="@string/str_assessment_title"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_assessment_title"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView24" />

        <TextView
            android:id="@+id/tv_assessment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/str_temp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView28"
            app:layout_constraintStart_toEndOf="@+id/textView28" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="24dp"
            android:text="@string/str_assessment_type"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView28" />

        <TextView
            android:id="@+id/tv_assessment_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/str_temp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView30"
            app:layout_constraintStart_toEndOf="@+id/textView30" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="24dp"
            android:text="@string/str_Start_Date"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView30" />

        <TextView
            android:id="@+id/tv_assessment_SD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/str_temp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView32"
            app:layout_constraintStart_toEndOf="@+id/textView32" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="24dp"
            android:text="@string/str_End_date"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView32" />

        <TextView
            android:id="@+id/tv_assessment_ED"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/str_temp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView34"
            app:layout_constraintStart_toEndOf="@+id/textView34" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>